--- a/p8105_hw2_bsr2136.md
+++ b/p8105_hw2_bsr2136.md
@@ -11,19 +11,19 @@ dir.create("files_for_hw2")
 
 ``` r
 trash_wheel <- 
-  read_excel("./files_for_hw2/HealthyHarborWaterWheelTotals2018-7-28.xlsx",
-             range = "A2:N338", sheet = "Mr. Trash Wheel")
+  read_excel("./files_for_hw2/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
+             range = "A2:N408", sheet = "Mr. Trash Wheel")
 
 trash_wheel <- trash_wheel %>% 
   janitor::clean_names() %>%
   filter(!is.na(dumpster)) %>%
   mutate(sports_balls = as.integer(round(sports_balls,0)))
   
-prec_2018 <- read_excel("./files_for_hw2/HealthyHarborWaterWheelTotals2018-7-28.xlsx",
+prec_2018 <- read_excel("./files_for_hw2/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
              range = "A3:B14", sheet = "2018 Precipitation",
              col_names = c("month","precipitation_inches"))
 
-prec_2017 <- read_excel("./files_for_hw2/HealthyHarborWaterWheelTotals2018-7-28.xlsx",
+prec_2017 <- read_excel("./files_for_hw2/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
              range = "A3:B14", sheet = "2017 Precipitation",
              col_names = c("month","precipitation_inches"))
 
@@ -44,11 +44,11 @@ precipitation_2017_2018 <- bind_rows(prec_2017,prec_2018) %>%
 nrow(trash_wheel)
 ```
 
-    ## [1] 285
+    ## [1] 344
 
 ``` r
 ## The variable dumpster gives a number from 1-285 that identifies which dumpster the data is referencing.
-## The variables month, year, and date give information on the date of trash collection by Mr. Trash wheel, which ranges from May 2015 to July 2018.
+## The variables month, year, and date give information on the date of trash collection by Mr. Trash wheel, which ranges from May 2015 to June 2019.
 ## The variables weight_tons and volume_cubic_yards give information on how much trash was collected.
 ```
 
@@ -57,11 +57,11 @@ nrow(trash_wheel)
 nrow(precipitation_2017_2018)
 ```
 
-    ## [1] 19
+    ## [1] 24
 
 ``` r
 ## The variable precipitation_inches gives the amount of precipitation in inches.
-## The variables month and year give information on the date that precipitation fell in.
+## The variables month and year give information on the date that precipitation fell in, and ranges from January 2017 to December 2018.
 ```
 
 ``` r
@@ -74,7 +74,7 @@ precipitation_2017_2018 %>%
     ## # A tibble: 1 x 1
     ##   total_prec
     ##        <dbl>
-    ## 1       23.5
+    ## 1       70.3
 
 ``` r
 ## The median number of sports balls in a dumpster in 2017 was
@@ -90,6 +90,84 @@ trash_wheel %>%
 
 ## Problem 2
 
-![](p8105_hw2_bsr2136_files/figure-gfm/pressure-1.png)<!-- -->
+``` r
+pols <- read_csv("./files_for_hw2/pols-month.csv")
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   mon = col_date(format = ""),
+    ##   prez_gop = col_double(),
+    ##   gov_gop = col_double(),
+    ##   sen_gop = col_double(),
+    ##   rep_gop = col_double(),
+    ##   prez_dem = col_double(),
+    ##   gov_dem = col_double(),
+    ##   sen_dem = col_double(),
+    ##   rep_dem = col_double()
+    ## )
+
+``` r
+unemploy <- read_csv("./files_for_hw2/unemployment.csv")
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   Year = col_double(),
+    ##   Jan = col_double(),
+    ##   Feb = col_double(),
+    ##   Mar = col_double(),
+    ##   Apr = col_double(),
+    ##   May = col_double(),
+    ##   Jun = col_double(),
+    ##   Jul = col_double(),
+    ##   Aug = col_double(),
+    ##   Sep = col_double(),
+    ##   Oct = col_double(),
+    ##   Nov = col_double(),
+    ##   Dec = col_double()
+    ## )
+
+``` r
+snp <- read_csv("./files_for_hw2/snp.csv")
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   date = col_character(),
+    ##   close = col_double()
+    ## )
+
+``` r
+pols <- pols %>%
+  separate(mon, into = c("year","month","day"), sep = "-") %>%
+  mutate(month = month.name[as.integer(month)],
+         president = ifelse(prez_gop>=1,"gop",ifelse(prez_dem>=1,"dem",NA))
+                            ) %>%
+  select(year,month,president,everything(),-prez_gop,-prez_dem,-day)
+
+snp <- snp %>%
+  separate(date, into = c("month","day","year"), sep = "/") %>%
+  mutate(month = month.name[as.integer(month)]) %>%
+  select(year,month,close)
+
+test <- unemploy %>%
+  rename('1' = Jan,
+         '2' = Feb,
+         '3' = Mar,
+         '4' = Apr,
+         '5' = May,
+         '6' = Jun,
+         '7' = Jul,
+         '8' = Aug,
+         '9' = Sep,
+         '10' = Oct,
+         '11' = Nov,
+         '12' = Dec) %>%
+  pivot_longer(2:13, 
+               names_to = "month",
+               values_to = "unemploy_rate") %>%
+  mutate(month = month.name[as.integer(month)])
+```
 
 ## Problem 3
