--- a/p8105_hw2_bsr2136.md
+++ b/p8105_hw2_bsr2136.md
@@ -147,6 +147,8 @@ fivethirtyeightdata <- left_join(fivethirtyeightdata, unemploy, by = c("year","m
 
 ### Describing the datasets
 
+#### Description of 3 individual datasets
+
 The pols-month dataset contained information on the partisan makeup of
 executive and legislative political positions in America from January
 1947 to June 2015. It had 822 observations of 9 variables, and after
@@ -175,6 +177,8 @@ longer column that indicates month, and also created a second column
 (unemploy\_rate) to store the value previously held in the month columns
 (-12 columns, +2 columns).
 
+#### Description of final combined dataset
+
 The final dataset combines the above three, and the pols-month and snp
 data are associated with a given month and year rather than an exact
 date in their original forms. The date range for the dataset is the same
@@ -197,3 +201,80 @@ snp, I could have kept that information in the table, and all the
 pols-month and unemployment data would have been NA for that date.
 
 ## Problem 3
+
+### Loading a tidying the data
+
+``` r
+baby_names <- read_csv("./files_for_hw2/Popular_Baby_Names.csv")
+
+baby_names <- baby_names %>%
+  rename(year = `Year of Birth`,
+         name_of_child = `Child's First Name`) %>%
+  janitor::clean_names() %>%
+  mutate(gender = tolower(gender),
+         name_of_child = tolower(name_of_child),
+         ethnicity = tolower(
+           ifelse(ethnicity == "ASIAN AND PACI","ASIAN AND PACIFIC ISLANDER",
+                  ifelse(ethnicity == "BLACK NON HISP","BLACK NON HISPANIC",
+                         ifelse(ethnicity == "WHITE NON HISP","WHITE NON HISPANIC",ethnicity)
+                         )
+                  )
+         )) %>%
+  distinct()
+```
+
+### Rank of Olivia over time by ethnicity
+
+``` r
+olivia <- baby_names %>%
+  filter(name_of_child == "olivia",
+         gender == "female") %>%
+  select(-gender,-name_of_child,-count) %>%
+  pivot_wider(names_from = year,
+              values_from = rank) %>%
+  select(1,7,6,5,4,3,2)
+
+knitr::kable(olivia)
+```
+
+| ethnicity                  | 2011 | 2012 | 2013 | 2014 | 2015 | 2016 |
+| :------------------------- | ---: | ---: | ---: | ---: | ---: | ---: |
+| asian and pacific islander |    4 |    3 |    3 |    1 |    1 |    1 |
+| black non hispanic         |   10 |    8 |    6 |    8 |    4 |    8 |
+| hispanic                   |   18 |   22 |   22 |   16 |   16 |   13 |
+| white non hispanic         |    2 |    4 |    1 |    1 |    1 |    1 |
+
+### Most popular boys name over time by ethnicity
+
+``` r
+popular_boys_names <- baby_names %>%
+  filter(rank==1,gender=="male") %>%
+  select(-gender,-count,-rank) %>%
+  pivot_wider(names_from = year,
+              values_from = name_of_child) %>%
+  select(1,7,6,5,4,3,2)
+
+knitr::kable(popular_boys_names)
+```
+
+| ethnicity                  | 2011    | 2012   | 2013   | 2014   | 2015   | 2016   |
+| :------------------------- | :------ | :----- | :----- | :----- | :----- | :----- |
+| asian and pacific islander | ethan   | ryan   | jayden | jayden | jayden | ethan  |
+| black non hispanic         | jayden  | jayden | ethan  | ethan  | noah   | noah   |
+| hispanic                   | jayden  | jayden | jayden | liam   | liam   | liam   |
+| white non hispanic         | michael | joseph | david  | joseph | david  | joseph |
+
+### Scatterplot of white non-hispanic males born in 2016
+
+``` r
+white_males <- baby_names %>%
+  filter(year==2016,
+         ethnicity == "white non hispanic",
+         gender == "male") %>%
+  ggplot(aes(x=rank,y=count)) + 
+  geom_point()
+
+white_males
+```
+
+![](p8105_hw2_bsr2136_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
